[package]
name = "resonite-dominion"
version = "1.0.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
chacha20 = "0.10.1"
chrono = { version = "0.4.45", features = ["alloc"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3.32", features = ["futures-sink", "sink"] }
http = "1.4.2"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["futures-util"] }
tokio-websockets = { version = "0.13.3", features = [
    "client",
    "rand",
    "server",
    "sha1_smol",
] }
